--- a/src/component/Header/Header.css
+++ b/src/component/Header/Header.css
@@ -1,17 +1,39 @@
-.nav{
-    height: 15%;
+@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&family=Luckiest+Guy&family=Orelega+One&family=Roboto:ital@1&family=Rubik:wght@800&family=Shrikhand&display=swap');
+
+.navbar{
+    height: 90px;
     background-color: black;
     position: fixed;
     width: 100%;
 }
-h1{
-    color: red;
+.mainTitle{
+    color: rgb(110, 62, 62);
+    text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
+    margin-left: 30px;
+    font-family: 'Fredoka One', cursive;
+    font-size: 50px;
 }
-img{
+.playlistTitle{
+    color: white;
+    text-decoration: none;
+    font-size: 20px;
+}
+.playlistTitle:hover{
+    color: rgb(110, 62, 62);
+}
+/* img{
     height: 93%;
     position: absolute;
-    right: 0;
+} */
+.css-i4bv87-MuiSvgIcon-root{
+    color: white;
+    margin-left: 2%;
+   
 }
-.form{
-    margin-left: 40%;
+.containerIcons{
+    /* background-color: aqua; */
+    margin-right: 1%;
+    display: flex;
+    padding: 10px;
+    margin-top: 2%;
 }
