--- a/src/component/Playlist/Playlist.css
+++ b/src/component/Playlist/Playlist.css
@@ -1,19 +1,50 @@
-.playlist{
-    /* border: 2px solid black; */
-    /* width: 75%; */
-    /* margin: 5%; */
-    padding: 20px;
-    margin-top: 30px;
+@import url('https://fonts.googleapis.com/css2?family=Concert+One&family=Fredoka+One&family=Luckiest+Guy&family=Orelega+One&family=Roboto:ital@1&family=Rubik:wght@800&family=Shrikhand&display=swap');
+.parallax{
+    min-height: 2000px; 
+    background-image: url("../../../1.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+  }
+.container-playlist-details{
+    margin-top: 90px;
+}
+
+.title-playlist{
+    color: white;
+    padding-top: 20px;
+    margin-left: 35%;
+    font-family: 'Concert One', cursive;
+}
+.containerPlaylist{
     display: flex;
-    /* justify-content: space-between; */
+    flex-direction: row;
+}
+.playlistSongs{
+    border: 2px solid black;
+    padding: 20px;
+    /* margin-top: 60px; */
+    padding-top: 34px;
+    margin-left: -25px;
+    margin-right: 48px;
+    display: flex;
     flex-wrap: wrap;
-    margin-left: 20px;
-    margin-right: 20px;
-    /* margin-bottom: 20px; */
+    flex-direction: row;
+    /* direction: rtl; */
+    /* justify-content: space-between; */
 }
-.play{
-    margin-top: 30px;
+.playlistDetails{
+    display: flex;
+    flex-direction: column;
+    margin-left: 50px;
+    border: 2px solid black;
+    text-align: center;
 }
-h2{
-    text-shadow: 2px 2px red;
+.playlistDetails:hover{
+    box-shadow: 0 8px 16px 0 rgba(117, 90, 90, 0.2);
+}
+.imgOfPlaylist{
+    height: 200px;
+    width: 200px;
 }
