--- a/src/component/Song/Song.css
+++ b/src/component/Song/Song.css
@@ -1,25 +1,30 @@
-.song{
-    border: 2px solid black;
+.playlistSong{
+    border: 2px solid white;
     font-family: "Orelega One";
     font-size: 20px;
-    padding: 5px;
-    width: 15%;
-    margin-left: 10px;
-    margin-bottom: 20px;
-    height: 250px;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    /* padding: 5px; */
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+    /* display: flex;
+    flex-wrap: wrap; */
+    /* flex-direction: column; */
+    width: 18%;
+    height: 350px;
     transition: 0.3s;
+    background-color: white;
 }
-.song:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+.playlistSong:hover {
+    box-shadow: 0 8px 16px 0 rgba(81, 70, 70, 0.2);
   } 
-.container {
-    padding: 2px 16px;
+.containerPlaylist {
+    padding: 10px 16px;
+    /* color: white; */
   }
-.delete{
+/* .delete{
       position: relative;
       top: 0;
       left: 80px;
       border: white;
       background-color: white;
-  }
+  } */
