--- a/src/component/RocommendedSongs/RecomendSong.css
+++ b/src/component/RocommendedSongs/RecomendSong.css
@@ -3,8 +3,10 @@
 .showRecomendSong{
     /* background-color: brown; */
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     width: 85%;
     padding: 20px;
-    margin-top: 89px;
+    margin-top: 47px;
+    margin-left: 25px;
 }
