--- a/src/component/Song/Song.css
+++ b/src/component/Song/Song.css
@@ -19,6 +19,8 @@
   } 
 .containerPlaylist {
     padding: 10px 16px;
+    display: flex;
+    flex-direction: column;
     /* color: white; */
   }
 /* .delete{
