--- a/src/component/Header/Header.css
+++ b/src/component/Header/Header.css
@@ -13,27 +13,30 @@
     font-family: 'Fredoka One', cursive;
     font-size: 50px;
 }
-.playlistTitle{
-    color: white;
-    text-decoration: none;
-    font-size: 20px;
-}
-.playlistTitle:hover{
-    color: rgb(110, 62, 62);
-}
-/* img{
-    height: 93%;
-    position: absolute;
-} */
-.css-i4bv87-MuiSvgIcon-root{
-    color: white;
-    margin-left: 2%;
-   
-}
-.containerIcons{
-    /* background-color: aqua; */
+/* .containerIcons{
     margin-right: 1%;
     display: flex;
     padding: 10px;
     margin-top: 2%;
+} */
+.privateArea{
+    min-width: 160px;
+    position: relative;
+    left: 89%;
+    bottom: 26%;
+    display: flex;
+}
+.helloUser{
+    color: white;
+}
+@media (max-width: 600px) {
+    .mainTitle{
+        margin-left: 25%;
+    }
+    .privateArea{
+        left: 71%;
+    }
+    .helloUser{
+        display: none;
+    }
 }
