--- a/src/component/Playlist/Playlist.css
+++ b/src/component/Playlist/Playlist.css
@@ -1,16 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Concert+One&family=Fredoka+One&family=Luckiest+Guy&family=Orelega+One&family=Roboto:ital@1&family=Rubik:wght@800&family=Shrikhand&display=swap');
-.parallax{
-    min-height: 1000px; 
-    background-image: url("../../../1.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
-  }
+@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Concert+One&family=Fredoka+One&family=Luckiest+Guy&family=Orelega+One&family=Roboto:ital@1&family=Rubik:wght@800&family=Sansita+Swashed:wght@300&family=Shrikhand&display=swap');
+
 .container-playlist-details{
     margin-top: 25px;
 }
-
 .title-playlist{
     color: white;
     padding-top: 20px;
@@ -20,31 +13,29 @@
 .containerPlaylist{
     display: flex;
     flex-direction: column;
+    height: 27%;
 }
 .playlistSongs{
-    border: 2px solid black;
-    padding: 20px;
-    /* margin-top: 60px; */
-    padding-top: 34px;
-    margin-left: -25px;
-    margin-right: 48px;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    /* direction: rtl; */
-    /* justify-content: space-between; */
-}
-.playlistDetails{
+    /* padding: 20px; */
+    padding-top: 30px;
     display: flex;
     flex-direction: column;
-    margin-left: 50px;
-    border: 2px solid black;
-    text-align: center;
-}
-.playlistDetails:hover{
-    box-shadow: 0 8px 16px 0 rgba(117, 90, 90, 0.2);
+    padding: 3%;
+    top: 22%;
+    width: 85%;
 }
 .imgOfPlaylist{
-    height: 200px;
-    width: 200px;
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+}
+.noSongsPlaylist{
+    color: white;
+    text-shadow: 0 0 3px #FF0000, 0 0 5px #0000FF;    text-align: center;
+    font-family: 'Sansita Swashed', cursive;
+}
+@media (max-width: 600px) {
+    .title-playlist{
+        margin-left: 33%;
+    }
 }
