--- a/src/component/Song/Song.css
+++ b/src/component/Song/Song.css
@@ -2,31 +2,63 @@
     border: 2px solid white;
     font-family: "Orelega One";
     font-size: 20px;
-    /* padding: 5px; */
     margin-left: 30px;
     margin-right: 30px;
     margin-bottom: 30px;
-    /* display: flex;
-    flex-wrap: wrap; */
-    /* flex-direction: column; */
-    width: 18%;
-    height: 350px;
+    width: 95%;
+    height: 10%;
     transition: 0.3s;
     background-color: white;
+    opacity: 0.6;
+    animation: swing .5s normal;
+    display: flex;
+    border-radius: 60px;
+    box-shadow: 0 8px 16px 0 rgba(117, 90, 90, 0.2);   
 }
 .playlistSong:hover {
-    box-shadow: 0 8px 16px 0 rgba(81, 70, 70, 0.2);
+  background-color: white;
+  opacity: 0.8;
   } 
-.containerPlaylist {
-    padding: 10px 16px;
+.containerPlaylistSong {
+    padding: 30px 26px;
     display: flex;
-    flex-direction: column;
-    /* color: white; */
+    text-align: center;
+    min-width: 71%;
+    height: 52px;
+    margin-top: 10px;
   }
-/* .delete{
-      position: relative;
-      top: 0;
-      left: 80px;
-      border: white;
-      background-color: white;
-  } */
+  .nameOfSong{
+    margin-right: 15px;
+  }
+ 
+  .icon-remove-from-playlist{
+       width: 10%;
+       margin-left: 96%;
+       position: relative;
+       bottom: unset;
+       top: 36px;
+       left: -989px;
+  }
+
+  @media (max-width: 690px) {
+    .playlistSong{
+       width: 85%;
+    }
+    .containerPlaylistSong{
+      display: flex;
+      flex-direction: column;
+      padding: 8px 41px 8px 1px;
+      margin-top: 14px;
+    }
+    .nameOfSong{
+      font-size: 17px;
+      margin-right: 5px;
+    }
+    .nameOfArtist{
+    font-size: 15px;
+    }
+    .icon-remove-from-playlist{
+      margin-left: 10%;
+      left: -74px;
+  }
+  }
